fix buttons and footer overflow

--- a/packages/patternfly-4/src/components/footer/footer.scss
+++ b/packages/patternfly-4/src/components/footer/footer.scss
@@ -37,3 +37,6 @@ $block: '.pf4';
     }
   }
 }
+#{$block}-site-copyright {
+  white-space: nowrap;
+}
