--- a/packages/patternfly-4/src/workspace.scss
+++ b/packages/patternfly-4/src/workspace.scss
@@ -6,7 +6,6 @@
   font-weight: var(--pf-global--FontWeight--bold);
   font-size: var(--pf-global--FontSize--md);
   line-height: var(--pf-global--LineHeight--md);
-  text-transform: uppercase;
 }
 
 %cross-link-text {
